# amalgam

./: .amalgam-manifest.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
crates/amalgam-cli/: Cargo.toml  README.md  build.rs
crates/amalgam-cli/src/: daemon.rs  lib.rs  main.rs  manifest.rs  package.rs  registry.rs  rich_package.rs  source_detector.rs  validate.rs  vendor.rs
crates/amalgam-cli/tests/: complex_import_scenarios_test.rs  import_path_calculator_integration.rs  k8s_cross_version_imports.rs  manifest_generation.rs  manifest_generation_simple.rs  mod_ncl_manifest_integration_test.rs  nickel_evaluation_test.rs  nickel_validation.rs  package_integration.rs  trace_imports.rs  unified_pipeline_test.rs  unified_url_imports_test.rs
crates/amalgam-codegen/: Cargo.toml  README.md  import_diagnostics.json  import_error_consistency.json
crates/amalgam-codegen/src/: error.rs  go.rs  import_pipeline_debug.rs  import_tracker.rs  lib.rs  nickel.rs  nickel_manifest.rs  nickel_package.rs  nickel_rich.rs  package_mode.rs  prelude.rs  resolver.rs  runtime_types.rs  rust.rs  test_debug.rs  validation.rs
crates/amalgam-codegen/tests/: crd_cross_package_test.rs  diagnostic_structures.rs  duplicate_type_names_test.rs  import_diagnostic_test.rs  import_edge_cases_test.rs  import_error_consistency_test.rs  import_generation_debug_test.rs  import_pipeline_validation_test.rs  import_resolution_regression_test.rs  import_resolution_tests.rs  import_symbol_resolution_test.rs  import_tracking_test.rs  multi_package_import_test.rs  nickel_compiler_integration_test.rs  pipeline_debug_test.rs  resolver_test.rs  validation_generation_test.rs
crates/amalgam-core/: Cargo.toml  README.md
crates/amalgam-core/src/: compilation_unit.rs  debug.rs  dependency_analyzer.rs  discovery.rs  error.rs  fingerprint.rs  fqn.rs  import_calculator.rs  ir.rs  lib.rs  manifest.rs  module_registry.rs  naming.rs  pipeline.rs  types.rs
crates/amalgam-core/src/special_cases/: mod.rs  pipeline.rs
crates/amalgam-core/src/special_cases/rules/: common.toml  crossplane.toml  k8s.toml
crates/amalgam-core/tests/: crossplane_integration.rs  pipeline_integration.rs
crates/amalgam-daemon/: Cargo.toml  README.md
crates/amalgam-daemon/src/: daemon.rs  health.rs  lib.rs  watcher.rs
crates/amalgam-parser/: Cargo.toml  README.md
crates/amalgam-parser/examples/k8s_io/: Nickel-pkg.ncl  mod.ncl
crates/amalgam-parser/examples/k8s_io/resource/: quantity.ncl
crates/amalgam-parser/examples/k8s_io/v0/: rawextension.ncl
crates/amalgam-parser/examples/k8s_io/v1/: affinity.ncl  apparmorprofile.ncl  azurediskvolumesource.ncl  azurefilevolumesource.ncl  cephfsvolumesource.ncl  cindervolumesource.ncl  clientipconfig.ncl  clustertrustbundleprojection.ncl  condition.ncl  configmap.ncl  configmapenvsource.ncl  configmapnodeconfigsource.ncl  (+255 more)
crates/amalgam-parser/src/: crd.rs  dependency_graph.rs  error.rs  fetch.rs  fetch_test.rs  go.rs  go_ast.rs  imports.rs  incremental.rs  k8s_authoritative.rs  k8s_imports.rs  k8s_types.rs  lib.rs  openapi.rs  package.rs  package_walker.rs  parsing_trace.rs  swagger.rs  validation_extractor.rs
crates/amalgam-parser/src/package/: import_extraction_debug.rs
crates/amalgam-parser/src/walkers/: crd.rs  mod.rs  openapi.rs
crates/amalgam-parser/tests/: comprehensive_nickel_test.rs  crd_ref_resolution_test.rs  error_handling_test.rs  fingerprint_version_test.rs  generated_file_validation_test.rs  import_resolution_test.rs  import_validation_test.rs  integration_test.rs  intorstring_contract_test.rs  k8s_import_generation_test.rs  mod_ncl_generation_test.rs  mod_ncl_snapshot_test.rs  nickel_package_test.rs  openapi_allof_anyof_test.rs  package_validation_test.rs  package_walker_test.rs  practical_usage_snapshot_test.rs  raw_extension_import_test.rs  same_version_imports_test.rs  snapshot_test.rs  test_swagger_auth.rs
crates/amalgam-parser/tests/fixtures/: mod.rs  multi_version.yaml  multiple_k8s_refs.yaml  nested_objects.yaml  simple_with_metadata.yaml  with_arrays.yaml  with_validation.yaml
crates/amalgam-parser/tests/snapshots/: comprehensive_nickel_test__comprehensive_package_usage.snap  comprehensive_nickel_test__comprehensive_package_usage.snap.new  comprehensive_nickel_test__import_debugging.snap  comprehensive_nickel_test__import_debugging.snap.new  comprehensive_nickel_test__safe_type_operations.snap  comprehensive_nickel_test__safe_type_operations.snap.new  practical_usage_snapshot_test__cross_package_imports.snap  practical_usage_snapshot_test__edge_cases.snap  practical_usage_snapshot_test__generated_test_type.snap  practical_usage_snapshot_test__k8s_empty_objects.snap  practical_usage_snapshot_test__package_structure.snap  practical_usage_snapshot_test__practical_k8s_usage.snap  snapshot_test__arrays_nickel.snap  snapshot_test__arrays_nickel.snap.new  snapshot_test__multi_version_all.snap  snapshot_test__multi_version_all.snap.new  snapshot_test__multiple_k8s_refs_nickel.snap  snapshot_test__multiple_k8s_refs_nickel.snap.new  snapshot_test__nested_objects_nickel.snap  snapshot_test__package_structure_main.snap  snapshot_test__simple_crd_ir.snap  snapshot_test__simple_crd_nickel.snap  snapshot_test__simple_crd_nickel.snap.new  snapshot_test__simple_with_k8s_imports.snap  snapshot_test__simple_with_k8s_imports.snap.new  snapshot_test__validation_nickel.snap  snapshot_test__validation_nickel.snap.new
crates/amalgam-registry/: Cargo.toml
crates/amalgam-registry/src/: index.rs  lib.rs  package.rs  resolver.rs  version.rs
crates/amalgam-runtime/: Cargo.toml
crates/amalgam-runtime/src/: errors.rs  lib.rs  merge.rs  nickel.rs  nickel_stub.rs  validate.rs
crates/amalgam-verification/: Cargo.toml  README.md
crates/amalgam-verification/scripts/: download-crds.sh  generate-types.sh
crates/amalgam-verification/src/: binding_resolver.rs  error.rs  lib.rs  nickel_typechecker.rs  reporter.rs  schema_validator.rs  validator.rs  yaml_roundtrip.rs
crates/amalgam-wasm/: Cargo.toml  README.md
crates/amalgam-wasm/src/: lib.rs
(+1226 files in other folders)
