[package]
name = "amalgam"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Type-safe configuration generator for Nickel from various schema sources"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam"
readme = "../README.md"
keywords = ["nickel", "kubernetes", "crd", "openapi", "configuration"]
categories = ["command-line-utilities", "development-tools", "config"]

[[bin]]
name = "amalgam"
path = "src/main.rs"

[dependencies]
amalgam-core = { version = "0.1.0", path = "../amalgam-core" }
amalgam-parser = { version = "0.1.0", path = "../amalgam-parser" }
amalgam-codegen = { version = "0.1.0", path = "../amalgam-codegen" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
openapiv3.workspace = true
toml = "0.8"
chrono = "0.4"
serde.workspace = true