[package]
name = "amalgam-codegen"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Code generators for Nickel and Go for amalgam"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-codegen"
readme = "README.md"
keywords = ["codegen", "nickel", "golang", "generator", "configuration"]
categories = ["development-tools::build-utils", "config"]

[dependencies]
amalgam-core = { version = "0.3.0", path = "../amalgam-core" }
quote.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
