[package]
name = "amalgam-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core IR and type system for amalgam configuration generator"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-core"
readme = false
keywords = ["configuration", "nickel", "kubernetes", "types", "codegen"]
categories = ["config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true