[package]
name = "amalgam-core"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Core IR and type system for amalgam configuration generator"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-core"
readme = "README.md"
keywords = ["configuration", "nickel", "kubernetes", "types", "codegen"]
categories = ["config", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[dev-dependencies]
proptest.workspace = true
