[package]
name = "amalgam-daemon"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Runtime daemon for watching and regenerating types for amalgam"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-daemon"
readme = "README.md"
keywords = ["daemon", "watch", "kubernetes", "crd", "configuration"]
categories = ["development-tools", "config"]

[dependencies]
amalgam-core.workspace = true
amalgam-parser.workspace = true
amalgam-codegen.workspace = true
tokio.workspace = true
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
kubernetes = ["kube", "k8s-openapi"]