[package]
name = "amalgam-daemon"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Runtime daemon for watching and regenerating types for amalgam"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-daemon"
readme = "README.md"
keywords = ["daemon", "watch", "kubernetes", "crd", "configuration"]
categories = ["development-tools", "config"]

[dependencies]
amalgam-core.workspace = true
amalgam-parser.workspace = true
amalgam-codegen.workspace = true
tokio.workspace = true
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Production daemon features
notify = "6.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
prometheus = "0.13"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
dashmap = "6.0"
lru = "0.12"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
kubernetes = ["kube", "k8s-openapi"]