[package]
name = "amalgam-parser"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Schema parsers for CRD, OpenAPI, and Go types for amalgam"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-parser"
readme = "README.md"
keywords = ["parser", "kubernetes", "openapi", "crd", "golang"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
amalgam-core = { version = "0.3.0", path = "../amalgam-core" }
amalgam-codegen = { version = "0.3.0", path = "../amalgam-codegen" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
openapiv3.workspace = true
k8s-openapi.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tempfile = "3.0"
tokio.workspace = true
indicatif = "0.17"
futures = "0.3"
atty = "0.2"

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1.4"
insta = { version = "1.40", features = ["yaml"] }