[package]
name = "amalgam-parser"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Schema parsers for CRD, OpenAPI, and Go types for amalgam"
homepage = "https://github.com/seryl/amalgam"
repository = "https://github.com/seryl/amalgam"
documentation = "https://docs.rs/amalgam-parser"
readme = "README.md"
keywords = ["parser", "kubernetes", "openapi", "crd", "golang"]
categories = ["parser-implementations", "development-tools"]

[features]
default = ["native"]
# Native platform features (not WASM compatible)
native = ["dep:reqwest", "dep:tempfile", "dep:tokio", "dep:indicatif", "dep:futures", "dep:atty"]

[dependencies]
amalgam-core.workspace = true
amalgam-codegen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
openapiv3.workspace = true
k8s-openapi.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
toml = "0.8"
sha2 = "0.10"

# Optional native-only dependencies
reqwest = { workspace = true, optional = true }
tempfile = { version = "3.0", optional = true }
tokio = { workspace = true, optional = true }
indicatif = { version = "0.17", optional = true }
futures = { version = "0.3", optional = true }
atty = { version = "0.2", optional = true }

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1.4"
insta = { version = "1.40", features = ["yaml"] }
regex = "1.10"