[package]
name = "amalgam-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime support library for amalgam-generated types"

[features]
default = ["nickel"]
nickel = ["dep:nickel-lang-core"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Regex for pattern validation
regex = "1"

# Nickel integration for contract validation (optional)
nickel-lang-core = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
